--- a/Contacts/Create a menu/task-info.yaml
+++ b/Contacts/Create a menu/task-info.yaml
@@ -219,6 +219,71 @@ files:
     \        }\n        catch (Exception ex) {\n            return new CheckResult(false,\
     \ \"Can't check the answer\");\n        }\n    }\n}\n"
   learner_created: false
+- name: src/contacts/Phonebook.java
+  visible: true
+  text: |
+    package contacts;
+
+    import java.util.ArrayList;
+
+    public class Phonebook {
+        private ArrayList<Contact> contacts;
+
+        public Phonebook() {
+            this.contacts = new ArrayList<>();
+        }
+
+        public Phonebook(int capacity) {
+            this.contacts = new ArrayList<>(capacity);
+        }
+
+        public boolean add(Contact contact) {
+            return this.contacts.add(contact);
+        }
+
+    }
+  learner_created: true
+- name: src/contacts/Contact.java
+  visible: true
+  text: |
+    package contacts;
+
+    public class Contact {
+        private String name;
+        private String surname;
+        private String phoneNumber;
+
+        public Contact(String name, String surname, String phoneNumber) {
+            this.name = name;
+            this.surname = surname;
+            this.phoneNumber = phoneNumber;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getSurname() {
+            return surname;
+        }
+
+        public void setSurname(String surname) {
+            this.surname = surname;
+        }
+
+        public String getPhoneNumber() {
+            return phoneNumber;
+        }
+
+        public void setPhoneNumber(String phoneNumber) {
+            this.phoneNumber = phoneNumber;
+        }
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/43/stages/229/implement#comment
 status: Unchecked
 record: -1
